--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "test-task",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -9,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1",
-    "faker": "^6.6.6"
+    "@faker-js/faker": "^7.3.0",
+    "express": "^4.18.1"
   }
 }
