--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@faker-js/faker": "^7.3.0",
-    "express": "^4.18.1"
+    "@nestjs/platform-express": "^9.0.8",
+    "@nestjs/typeorm": "^9.0.0",
+    "express": "^4.18.1",
+    "mysql2": "^2.3.3",
+    "typeorm": "^0.3.7"
   }
 }
