--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nestjs/typeorm": "^9.0.0",
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
-    "typeorm": "^0.3.7"
+    "typeorm": "^0.3.7",
+    "typescript": "^4.7.4"
   }
 }
