--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "test-task",
   "version": "1.0.0",
-  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -15,6 +14,7 @@
     "@nestjs/typeorm": "^9.0.0",
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
+    "source-map-support": "^0.5.21",
     "typeorm": "^0.3.7",
     "typescript": "^4.7.4"
   }
